--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -7,6 +7,7 @@
       %th 操作
       %th ログイン名
       %th 表示名
+      %th 権限
   %tbody
     - @users.each do |user|
       %tr
@@ -16,3 +17,4 @@
           = link_to '編集', edit_admin_user_path(user), class: 'btn btn-mini btn-success'
         %td= link_to user.name, edit_admin_user_path(user)
         %td= user.real_name
+        %td= user.role
