--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -18,3 +18,5 @@
         %td= link_to user.name, edit_admin_user_path(user)
         %td= user.real_name
         %td= user.role
+
+= paginate @users
