--- a/app/views/admin/blog_categories/index.html.haml
+++ b/app/views/admin/blog_categories/index.html.haml
@@ -1,5 +1,13 @@
+- content_for :title do
+  ニュースカテゴリ一覧
+
 .page-header
-  %h1 記事カテゴリ一覧
+  %h1 ニュースカテゴリ一覧
+
+= link_to new_admin_blog_category_path, class: 'btn btn-primary' do
+  %li.icon-white.icon-plus
+  作成
+
 %table.table.table-striped
   %thead
     %tr
