--- a/app/views/admin/blog_posts/index.html.haml
+++ b/app/views/admin/blog_posts/index.html.haml
@@ -1,5 +1,13 @@
+- content_for :title do
+  ニュース一覧
+
 .page-header
-  %h1 記事一覧
+  %h1 ニュース一覧
+
+= link_to new_admin_blog_post_path, class: 'btn btn-primary' do
+  %li.icon-white.icon-plus
+  作成
+
 %table.table.table-striped
   %thead
     %tr
