--- a/app/views/admin/file_uploader/index.html.haml
+++ b/app/views/admin/file_uploader/index.html.haml
@@ -1,8 +1,22 @@
+- content_for :title do
+  = 'ファイル管理'
+
 .page-header
   %h1 ファイル管理
   %h3= ['/files', params[:path]].compact.join '/'
 
-
+.row-fluid
+  .span6
+    %h4 アップロード
+    = form_tag [admin_file_uploader_path, params[:path]].compact.join('/'), multipart: true do
+      = file_field_tag 'file'
+      = submit_tag 'アップロード', class: 'btn btn-primary'
+  .span6
+    %h4 新規ディレクトリ
+    = form_tag [admin_file_uploader_path, params[:path], 'new_dir'].compact.join('/') do
+      .input-append
+        = text_field_tag 'dir_name', '', placeholder: '新規ディレクトリ名', class: ''
+        = submit_tag '作成', class: 'btn btn-primary'
 
 %table.table.table-hover
   %thead
@@ -26,15 +40,3 @@
         %td= f[:size]
         %td= l f[:mtime]
 
-.row
-  .span6
-    %h4 アップロード
-    = form_tag [admin_file_uploader_path, params[:path]].compact.join('/'), multipart: true do
-      = file_field_tag 'file'
-      = submit_tag 'アップロード', class: 'btn btn-primary'
-  .span6
-    %h4 新規ディレクトリ
-    = form_tag [admin_file_uploader_path, params[:path], 'new_dir'].compact.join('/') do
-      .input-append
-        = text_field_tag 'dir_name', '', placeholder: '新規ディレクトリ名', class: ''
-        = submit_tag '作成', class: 'btn btn-primary'
