--- a/app/views/admin/page_categories/index.html.haml
+++ b/app/views/admin/page_categories/index.html.haml
@@ -1,5 +1,13 @@
+- content_for :title do
+  ページカテゴリ一覧
+
 .page-header
   %h1 ページカテゴリ一覧
+
+= link_to new_admin_page_category_path, class: 'btn btn-primary' do
+  %li.icon-white.icon-plus
+  作成
+
 %table.table.table-striped
   %thead
     %tr
