--- a/app/views/admin/pages/index.html.haml
+++ b/app/views/admin/pages/index.html.haml
@@ -1,5 +1,13 @@
+- content_for :title do
+  ページ一覧
+
 .page-header
   %h1 ページ一覧
+
+= link_to new_admin_page_path, class: 'btn btn-primary' do
+  %li.icon-white.icon-plus
+  作成
+
 %table.table.table-striped
   %thead
     %tr
