--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -1,3 +1,8 @@
+= link_to admin_users_path, class: 'btn btn-info' do
+  %li.icon-white.icon-list
+  一覧に戻る
+%hr
+
 = form_for [:admin, @user], :html => { :class => 'form-horizontal' } do |f|
   - if @user.errors.any?
     .alert.alert-block.fade.in.alert-error
