--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,6 +1,10 @@
 .page-header
   %h1 ユーザ一覧
 
+= link_to new_admin_user_path, class: 'btn btn-primary' do
+  %li.icon-white.icon-plus
+  作成
+
 %table.table.table-striped
   %thead
     %tr
