--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -18,55 +18,55 @@
         { include_blank: 'なし' }
 
   %div{class: "control-group #{'error' unless @page.errors[:parent_id].blank?}"}
-    = f.label '親ページ', class: 'control-label'
+    = f.label '親ページ', class: 'control-label', title: 'URL階層で親となるページを選択します。'
     .controls
       = f.collection_select :parent_id, @pages, :id, :tree_title,
         { include_blank: 'なし' }, { class: 'input-xxlarge'}
 
   %div{class: "control-group #{'error' unless @page.errors[:name].blank?}"}
-    = f.label 'ページ名', class: 'control-label'
+    = f.label 'ページ名', class: 'control-label', title: 'URL表記で使用します。'
     .controls
       = f.text_field :name, class: 'input-large'
 
   %div{class: "control-group #{'error' unless @page.errors[:title].blank?}"}
-    = f.label 'タイトル', class: 'control-label'
+    = f.label 'タイトル', class: 'control-label', title: 'ページのtitleタグで使用されます。'
     .controls
       = f.text_field :title, class: 'input-xxlarge'
 
   %div{class: "control-group #{'error' unless @page.errors[:description].blank?}"}
-    = f.label '説明文', class: 'control-label'
+    = f.label '説明文', class: 'control-label', title: '検索エンジンではこの説明文が表示されます。'
     .controls
       = f.text_area :description, class: 'text_field', rows: 2, style: 'width: 80%'
 
   %div{class: "control-group #{'error' unless @page.errors[:keywords].blank?}"}
-    = f.label 'キーワード', class: 'control-label'
+    = f.label 'キーワード', class: 'control-label', title: 'ページ内に頻出する重要ワードをセットすると、SEO対策に繋がります。（複数ある場合は半角カンマで区切ってください）'
     .controls
       = f.text_area :keywords, class: 'text_field', rows: 2, style: 'width: 80%'
 
   %div{class: "control-group #{'error' unless @page.errors[:body].blank?}"}
-    = f.label '本文', class: 'control-label'
+    = f.label '本文', class: 'control-label', title: 'ページの本文をHTMLで記述します。'
     .controls
       = f.text_area :body, class: 'text_field', rows: 20, style: 'width: 100%'
       %pre{id: 'body_editor', style: 'position: relative; height: 600px; padding: 0'}
 
   %div{class: "control-group #{'error' unless @page.errors[:author_id].blank?}"}
-    = f.label '作成者', class: 'control-label'
+    = f.label '作成者', class: 'control-label', title: 'ページの作成者を選択します。'
     .controls
       = f.collection_select :author_id, @users, :id, :real_name
 
   %div{class: "control-group #{'error' unless @page.errors[:published].blank?}"}
-    = f.label '公開する', class: 'control-label'
+    = f.label '公開する', class: 'control-label', title: 'チェックが外れた場合、ページは公開されません。'
     .controls
       = f.check_box :published
 
   %div{class: "control-group #{'error' unless @page.errors[:priority].blank?}"}
-    = f.label '重要度', class: 'control-label'
+    = f.label '重要度', class: 'control-label', title: 'サイト全体の相対的なページの重要度を設定します。（SEO対策）'
     .controls
       = f.range_field :priority, class: 'input-large', min: 0.1, max: 1.0, step: 0.05
       %span#page_priority_disp= @page.priority
 
   %div{class: "control-group #{'error' unless @page.errors[:published_at].blank?}"}
-    = f.label '公開日時', class: 'control-label'
+    = f.label '公開日時', class: 'control-label', title: '公開を開始する日時をセットします。（この日時になるまでページは公開されません。）'
     .controls
       = f.datetime_select :published_at, {}, class: 'input-small'
 
