--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -23,6 +23,6 @@
       - if n = @post.next
         %li.next
           = link_to news_path(n) do
-            &rarr;次の記事へ
+            次の記事へ&rarr;
   .span3
     = render partial: 'categories'
