--- a/app/views/admin/blog_posts/preview.html.haml
+++ b/app/views/admin/blog_posts/preview.html.haml
@@ -1,9 +1,9 @@
 %h3= @post.title
 .row
   .span9
-    = sanitize @post.intro
+    = raw @post.intro
     %br
-    = sanitize @post.body
+    = raw @post.body
 
     %hr{style: "border: 1px solid #E5E5E5;"}
     投稿日：
