--- a/app/views/admin/blog_posts/index.html.haml
+++ b/app/views/admin/blog_posts/index.html.haml
@@ -12,11 +12,12 @@
   %thead
     %tr
       %th 操作
+      %th= sortable_link 'カテゴリ', 'category_id', params
       %th= sortable_link 'タイトル', 'title', params
       %th= sortable_link '公開', 'published', params
-      %th= sortable_link 'カテゴリ', 'category_id', params
-      %th= sortable_link '作成者', 'author_id', params
-      %th= sortable_link '最終更新日', 'updated_at', params
+      %th= sortable_link '投稿者', 'author_id', params
+      %th= sortable_link '公開日時', 'published_at', params
+      %th= sortable_link '最終更新日時', 'updated_at', params
   %tbody
     - @posts.each do |post|
       %tr
@@ -25,11 +26,12 @@
           = link_to "削除", admin_blog_post_path(post),
             method: :delete, data: { confirm: "削除してよろしいですか？" }, class: 'btn btn-mini btn-danger'
           = link_to "編集", edit_admin_blog_post_path(post), class: 'btn btn-mini btn-success'
+        %td= post.category ? post.category.title : 'なし'
         %td= link_to post.title, edit_admin_blog_post_path(post)
         %td
           %i{class: "icon-#{post.published ? 'ok' : 'remove'}"}
-        %td= post.category ? post.category.title : 'なし'
         %td= post.author.real_name if post.author
+        %td= l post.published_at, format: :short
         %td= l post.updated_at, format: :short
 
 = paginate @posts
