Fix issue #14 Message for no posts

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -3,6 +3,8 @@
 
 .row
   .span9
+    - if @posts.blank?
+      %strong 記事はありません。
     - @posts.each do |post|
       .well.blog
         %blockquote
