--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -18,11 +18,11 @@
     %ul.pager
       - if p = @post.prev
         %li.previous
-          = link_to news_path(p) do
+          = link_to news_path(p), rel: 'prev' do
             &larr;前の記事へ
       - if n = @post.next
         %li.next
-          = link_to news_path(n) do
+          = link_to news_path(n), rel: 'next' do
             次の記事へ&rarr;
   .span3
     = render partial: 'categories'
