--- a/app/views/layouts/admin_login.html.haml
+++ b/app/views/layouts/admin_login.html.haml
@@ -6,11 +6,11 @@
     %meta(name="viewport" content="width=1024px initial-scale=1.0")
     %title= content_for?(:title) ? "#{yield(:title)}｜高専ベンチャー CMS" : "高専ベンチャー CMS"
     = csrf_meta_tags
+    %meta(name="robots" content="noindex,nofollow")
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag "admin", :media => "all"
-
   %body
     .container-fluid
       .row-fluid
