--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -14,47 +14,7 @@
     = javascript_include_tag "ckeditor/init"
 
   %body
-    .navbar.navbar-fluid-top.navbar-inverse
-      .navbar-inner
-        .container-fluid
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          = link_to '高専ベンチャー', root_path, class: 'brand', target: '_blank'
-          - if current_admin
-            .container.nav-collapse
-              %ul.nav
-                %li= icon_link_to "ダッシュボード", admin_path, 'icon-white icon-home'
-
-                %li.dropdown
-                  = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
-                    %i.icon-white.icon-file
-                    ページ管理
-                    %b.caret
-                  %ul.dropdown-menu
-                    %li.nav-header ページ
-                    %li= icon_link_to "一覧", admin_pages_path, 'icon-list'
-                    %li= icon_link_to "作成", new_admin_page_path, 'icon-plus'
-
-                %li.dropdown
-                  = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
-                    %i.icon-white.icon-pencil
-                    ニュース管理
-                    %b.caret
-                  %ul.dropdown-menu
-                    %li.nav-header ニュース
-                    %li= icon_link_to "一覧", admin_blog_posts_path, 'icon-list'
-                    %li= icon_link_to "作成", new_admin_blog_post_path, 'icon-plus'
-                    %li.nav-header カテゴリ
-                    %li= icon_link_to "一覧", admin_blog_categories_path, 'icon-list'
-                    %li= icon_link_to "作成", new_admin_blog_category_path, 'icon-plus'
-
-                %li= icon_link_to "ファイル管理", admin_file_uploader_path, 'icon-white icon-folder-close'
-                %li= icon_link_to 'ユーザ管理', admin_users_path, 'icon-white icon-user'
-                %li= icon_link_to 'サイト管理', admin_site_config_path, 'icon-white icon-globe'
-              %ul.nav.pull-right
-                %li= icon_link_to 'ログアウト', admin_session_path, 'icon-white icon-off', method: :delete
+    = render partial: 'admin/shared/navbar'
 
     .container-fluid
       .row-fluid
